agir/front/components/theme/_styles.scss
// Change default display for images
img {
  max-width: 100%;
  height: auto;
}

hr {
  border-top-color: #dfdfdf !important;
}

// Utils
.padtop {
  padding-top: $line-height-computed * 0.5;
}

.padbottom {
  padding-bottom: $line-height-computed * 0.5;
}

.padtopless {
  padding-top: $line-height-computed * 0.25;
}

.padbottomless {
  padding-bottom: $line-height-computed * 0.25;
}

.padtopmore {
  padding-top: $line-height-computed * 0.75;
}

.padbottommore {
  padding-bottom: $line-height-computed * 0.75;
}

.margintopless {
  margin-top: $line-height-computed * 0.5;
}

.margintop {
  margin-top: $line-height-computed * 0.75;
}

.margintopmore {
  margin-top: $line-height-computed;
}

.marginbottomless {
  margin-bottom: $line-height-computed * 0.5;
}

.marginbottom {
  margin-bottom: $line-height-computed * 0.75;
}

.marginbottommore {
  margin-bottom: $line-height-computed;
}

.center {
  text-align: center;
}

.headline {
  padding-left: 0;
}

.text-block {
  padding-left: 0;
}

// Theme
.navbar-brand {
  height: auto;
}

